--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@cljs-oss/module-deps": "^1.1.1",
     "ag-grid-community": "^23.1.0",
+    "ag-grid-enterprise": "^23.1.0",
     "ag-grid-react": "^23.1.0",
     "bulma": "0.7.4",
     "cryptojs": "^2.5.3",
