--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "moment": "^2.24.0",
     "react": "16.8.4",
     "react-datetime": "^2.16.3",
-    "react-dom": "16.8.4"
+    "react-dom": "16.8.4",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.1"
   }
 }
